update fix modal shift on Windows OS

--- a/src/scss/layouts/_main.scss
+++ b/src/scss/layouts/_main.scss
@@ -1,5 +1,14 @@
 @use "../utils/variables" as *;
 
+html {
+  scrollbar-gutter: stable;
+}
+
+body.modal-open {
+  overflow: hidden;
+  padding-right: var(--scrollbar-width, 0px);
+}
+
 .site-main {
   /* min-height: calc(100vh - 72px - 160px);*/
   box-sizing: border-box;
@@ -13,7 +22,7 @@
 
   &__content {
     width: 100%;
-  /*  max-width: 1440px; */
+    /*  max-width: 1440px; */
     margin: 0 auto;
 
     &--landing {
